# MatchSlide

./: README.md  effect.fs  sprite.fs  sprite.vs  text.frag  text.vs
MatchSlideAnimation/: CMakeLists.txt  Effects.cpp  Effects.h  Event.cpp  Event.h  JUtils.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  VideoRender.cpp  VideoRender.h  basicimage.cpp  basicimage.h  main.cpp  shader.cpp  shader.h  stb_image.h  texture.cpp  texture.h
MatchSlideAnimation/NetworkAPI/: CMakeLists.txt  JSONAPI.cpp  JSONAPI.h
MatchSlideAnimation/shaders/: Shader.h
